# MuonLifeTime

./: README.md  montecarlosim_flux_increase.C  montecarlosim_flux_study.C  random_exercise_petya.ipynb
MC/: CMakeCache.txt  CMakeLists.txt  ExponentialFitRange.root  ExponentialFitWeek.root  Makefile  PartialFit.root  PlotComp.C  PlotComp1.C  cmake_install.cmake  constants.h  example.txt  generator.cpp  generator.h  montecarlosim  montecarlosim.C  montecarlosim_2exp_b.C  montecarlosim_exp.C  montecarlosim_exp_b.C  montecarlosim_flux.C  montecarlosimold.C
